--- a/css/estilos.css
+++ b/css/estilos.css
@@ -137,7 +137,7 @@ h1{
   background-size: cover;
   background-repeat: no-repeat;
   background-color: transparent;
-  width: 1200px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
