--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
-	height: 100px; /* NOTE: cambiar altura cuando tengamos contenido */
+	height: 100px;
 }
 
 .imagen{
