--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -93,7 +93,7 @@ a:focus{
 }
 
 .login {
-	width: 450px;
+	width: 300px;
 	position: absolute;
 	top:15px;
 	right: 10px;
@@ -329,15 +329,6 @@ button:hover{
   margin-top: 2px;
 }
 
-/*-------------------- HomeUser-------------------------*/
-
-.bienvenida h1{
-  max-width: 100%;
-  margin-top: 60px;
-  text-align: center;
-}
-
-
 /*>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>REGISTRO<<<<<<<<<<<<<<<<<<*/
 
 
@@ -360,11 +351,10 @@ h2{
 
 
 
-
 .error {
   display: block;
   border: 2px solid red;
-  max-width: 250px;
+  width: 250px;
   margin: auto;
   margin-top: 5px;
 }
@@ -499,29 +489,6 @@ h2{
   color: #fff;
 }
 
-
-
-.file-upload__input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    font-size: 1;
-    width:0;
-    height: 100%;
-    opacity: 0;
-}
-
-.img img{
-width: 300px;
-margin: 0 auto 0 auto;
-padding: 5px;
-background-color: #000000;
-color: #fff;
-max-width: 99%;
-}
-
 file-upload {
 	position: relative;
 	display: inline-block;
@@ -541,7 +508,6 @@ file-upload {
   background: #e0e0e0;
 
 }
-
 
 /*<<<<<<<<<<<<<<<<<<<<INGRESAR>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
@@ -1074,6 +1040,8 @@ h2{
   padding-left: 10px;
   padding-right: 10px;
 }
+
+
 .contenedor_formulario .formulario .input_group.checkbox label,
 .contenedor_formulario .formulario .input_group.radio label {
   display: block;
@@ -1083,6 +1051,22 @@ h2{
   padding: 15px 15px 5px 51px;
   font-size: 1em;
   border-radius: 3px;
+}
+
+
+.contenedor_formulario .formulario .input_group input[type="text"],
+.contenedor_formulario .formulario .input_group input[type="email"],
+.contenedor_formulario .formulario .input_group input[type="password"] {
+  font-family: "Roboto";
+  font-size: 16px;
+  color: dimgray;
+  width: 100%;
+  outline: none;
+  padding: 15px;
+  background: none;
+  border: none;
+  border-bottom: 2px solid #e0e0e0;
+  margin-top: 20px;
 }
 
 .contenedor_formulario .formulario .input_group {
